# full-python-lib

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
recipe/: meta.yaml
src/: single_file.py
src/multi_file_pkg/: multi_file_module_a.py  multi_file_module_b.py
tests/: conftest.py  single_file_test.py
