[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "full-python-lib"
version = "0.0.1"
description = "Small package template"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE"}
keywords = ["your", "own", "keywords", "example", "sample"]
authors = [
    { name = "Dogukan Mertoglu", email = "dogukan.mertoglu01@gmail.com"}
]
maintainers = [
    { name = "Dogukan Mertoglu", email = "dogukan.mertoglu01@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed"
]
dependencies = [
    "attrs"  # this is just pretending that this package is depending on attrs
]

[project.scripts]
hello-world = "single_file:main"

[project.urls]
homepage = "https://github.com/dokick/full-python-lib"
documentation = "https://github.com/dokick/full-python-lib"
repository = "https://github.com/dokick/full-python-lib"

[project.optional-dependencies]
dev = [
    "isort",
    "pylint>=3",
    "pytest",
    "tox-conda"
]

[tool.setuptools]
py-modules = ["single_file"]

[tool.setuptools.packages.find]
where = ["src"]

# no build config at this point

[tool.isort]
verbose = true

[tool.pylint.main]
fail-on = "F, E, W"
fail-under = 8  # this value can be tweaked

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
